--- a/style1.css
+++ b/style1.css
@@ -5,6 +5,8 @@ body{
     margin: 0;
     padding: 0;
     background-image: url(pexels-alfonso-escalante-2533092.jpg);
+        max-width: 100%;
+
     top: 0;
     left: 0;
     background-size: cover;
@@ -15,6 +17,8 @@ body{
 }
 .loginbox{
     width: 420px;
+        max-width: 100%;
+
     font-family: Georgia, 'Times New Roman', Times, serif;
     height: 600px;
     background: #000;
